[dyad] Adding 3 new breakfast recipes - wrote 2 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,7 +57,7 @@
     "unlimited_access": "Unlimited access to",
     "ai_identifier": "AI Scanner",
     "claim": "CLAIM",
-    "calories": "CALORIES",
+    "calories": "CALORÍAS",
     "nutrition": "NUTRITION"
   },
   "connect_apps": {
