[dyad] Adding Diet Library page - wrote 5 file(s)

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -325,7 +325,7 @@
     "settings": "Perfil",
     "profile": "Perfil",
     "progress": "Progreso",
-    "diets": "Dietas",
+    "diets": "Plan de Comidas",
     "log_title": "Registrar Actividad",
     "scan_food": "Escanear Comida",
     "scan_menu": "Escanear Menú",
