--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,7 +57,7 @@
     "unlimited_access": "Unlimited access to",
     "ai_identifier": "AI Scanner",
     "claim": "CLAIM",
-    "calories": "CALORÍAS",
+    "calories": "CALORIES",
     "nutrition": "NUTRITION"
   },
   "connect_apps": {
@@ -325,7 +325,7 @@
     "settings": "Profile",
     "profile": "Profile",
     "progress": "Progress",
-    "diets": "Diets",
+    "diets": "Meal Plan",
     "log_title": "Log Activity",
     "scan_food": "Scan Food",
     "scan_menu": "Scan Menu",
@@ -333,7 +333,8 @@
     "log_exercise": "Log Exercise",
     "log_weight": "Log Weight",
     "log_water": "Log Water",
-    "recipes": "Recipes"
+    "recipes": "Recipes",
+    "diet_library": "Diets"
   },
   "recipes": {
     "title": "Recipes",
@@ -576,7 +577,7 @@
       "portions": "Portions",
       "list": {
         "tuna_water": "Tuna in water",
-        "cooked_quinoa": "Cooked quinoa",
+        "cooked_quinoa": "Quinoa cocida",
         "tomato": "Tomato",
         "cucumber": "Cucumber",
         "olive_oil": "Olive oil",
