--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -577,7 +577,7 @@
       "portions": "Portions",
       "list": {
         "tuna_water": "Tuna in water",
-        "cooked_quinoa": "Quinoa cocida",
+        "cooked_quinoa": "Cooked quinoa",
         "tomato": "Tomato",
         "cucumber": "Cucumber",
         "olive_oil": "Olive oil",
@@ -910,7 +910,7 @@
         "eggs": "Eggs",
         "spinach": "Spinach",
         "tomato": "Tomato",
-        "olive_oil": "Olive oil"
+        "olive_oil": "Aceite de oliva"
       },
       "instructions": [
         "Beat the eggs.",
@@ -918,6 +918,28 @@
         "Sauté tomato and spinach for a few minutes.",
         "Add eggs and cook, stirring until done."
       ]
+    },
+    "diet_plans": {
+      "high_protein": {
+        "name": "High Protein",
+        "description": "Nutritional plan focused on increasing the proportion of proteins in daily intake to favor muscle mass preservation, improve satiety, and support body fat reduction, while maintaining an adequate caloric balance.",
+        "objective": "Prioritize protein consumption within a balanced diet, without completely eliminating carbohydrates or fats.",
+        "ideal_for": [
+          "People looking to lose fat without losing muscle mass.",
+          "Users who perform physical activity or strength training.",
+          "People who want better appetite control."
+        ],
+        "not_recommended_for": [
+          "People with medical restrictions related to high protein diets.",
+          "People who follow a strictly vegan diet."
+        ]
+      },
+      "labels": {
+        "objective": "Objective",
+        "ideal_for": "Ideal For",
+        "not_recommended": "Not Recommended For",
+        "macros": "Target Macros"
+      }
     }
   }
 }
